# Ingineria-Informatiei-Eng

An 1/Sem1/Computer Programming/: test.py
An 1/Sem1/Computer Programming/HW/: ex.py  game.py
An 1/Sem1/Computer Programming/HW/A3 modified/: input.txt  output.txt  p5.py
An 1/Sem1/Computer Programming/HW/pzii0071_A1/: 12.py  16.py  20.py  4.py  8.py
An 1/Sem1/Computer Programming/HW/pzii0071_A2/: features.py  p2.py
An 1/Sem1/Computer Programming/HW/pzii0071_A3/: input.txt  p3.py
An 1/Sem1/Computer Programming/HW/pzii0071_A4/: p4.py
An 1/Sem1/Computer Programming/HW/pzii0071_A5/: p5.py
An 1/Sem1/Computer Programming/Lab/4.10.2024/: firstNproduce.py
An 1/Sem1/Computer Programming/LearningPy/: arrays.py  data_types.py  indentation.py  operators.py  variables.py
An 1/Sem1/Computer Programming/Seminar/07.10.24/: aparitions.py
An 1/Sem1/Computer Programming/practicalExam_PappAndrasZsolt/: library.py  main.py  ui.py
An 1/Sem1/Fizica/: Determinarea rezistențelor prin metoda punții Wheatstone.docx  ReferatStudiuMRUV.docx  ReferatStudiulDependenteiDeTemperatura.docx  masuratori.txt  tabel.py
An 1/Sem1/Grafica/: 2.15.dwg  2.16.dwg  2.17.bak  2.17.dwg  2.18.bak  2.18.dwg  2.19.dwg  2.20.dwg  2.21.dwg  2.22.dwg  2.23.dwg  PAPP_ANDRAS_ZSOLT.bak  PAPP_ANDRAS_ZSOLT.dwg  PAPP_ANDRAS_ZSOLT_TEST1.dwg  PAPP_ANDRAS_ZSOLT_TEST2.dwg  PAPP_ANDRAS_ZSOLT_TEST3.dwg  Prototip1.bak  aplicatie 2.6.dwg  aplicatie 2.7.dwg
An 1/Sem2/SDA/Lab/HW/IndexedList_SLLA/: App.cpp  CMakeLists.txt  IndexedList.cpp  IndexedList.h  ListIterator.cpp  ListIterator.h
(+112 files in other folders)
